force-app/main/default/objects/BOR_Checklist__c/BOR_Checklist__c.object-meta.xml
<CustomObject>
    <label>BOR Checklist</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>BOR Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>