force-app/main/default/objects/BOR_Checklist__c/fields/Carrier_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order_Line_Item__c</fullName>
    <description>Benefit Transfer - Used to get the reference from carrier Order Line Item</description>
    <label>Carrier Order Line Item</label>
    <referenceTo>Carrier_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>