force-app/main/default/objects/BOR_Checklist__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>