force-app/main/default/objects/BOR_Checklist__c/fields/Facilitator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Notes__c</fullName>
    <description>Benefit Transfer - Capture notes provided by Facilitator while checklist collection</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Facilitator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>