force-app/main/default/objects/BOR_Checklist__c/fields/TADA_Status__c.field-meta.xml
<CustomField>
    <fullName>TADA_Status__c</fullName>
    <description>Benefit Transfer - Show Checklist based on TADA CO status</description>
    <label>TADA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Implementing TAdA Plans</fullName>
            </value>
            <value>
                <fullName>Ready for Balance Collection</fullName>
            </value>
            <value>
                <fullName>Balance Collection</fullName>
            </value>
            <value>
                <fullName>Transferring Balances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>